replace official app name in relevant files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Women N Talent",
-  "name": "Women N Talent landing page",
+  "short_name": "Spots",
+  "name": "Spots App",
   "icons": [
     {
       "src": "",
